--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/00-action-blocks-docs.twig
@@ -1,7 +1,6 @@
 {% set schema = bolt.data.components['@bolt-components-action-blocks'].schema %}
 
-{% set code %} {% verbatim %}
-{% include "@bolt-components-action-blocks/action-blocks.twig" with {
+{% set code %}{% verbatim %}{% include "@bolt-components-action-blocks/action-blocks.twig" with {
   contentItems: [
     {
       text: "Item 1",
@@ -31,9 +30,7 @@
       }
     }
   ]
-} only %}
-{% endverbatim %}
-{% endset %}
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
