--- a/apps/pattern-lab/src/_patterns/02-components/button/00-button-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/button/00-button-docs.twig
@@ -1,10 +1,7 @@
 {% set schema = bolt.data.components['@bolt-components-button'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-button/button.twig" with {
-    "text": "Example Button"
-  } %}
-{% endverbatim %}
-{% endset %}
+{% set code %}{% verbatim %}{% include "@bolt-components-button/button.twig" with {
+  text: "Example Button"
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
