--- a/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/00-card-docs.twig
@@ -1,6 +1,5 @@
 {% set schema = bolt.data.components['@bolt-components-card'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-card/card.twig" with {
+{% set code %}{% verbatim %}{% include "@bolt-components-card/card.twig" with {
   url: "javascript:",
   contentItems: [
     {
@@ -31,9 +30,7 @@
       text: "Get the report"
     }
   ]
-} only %}
-{% endverbatim %}
-{% endset %}
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
