--- a/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/code-snippet/00-code-snippet-docs.twig
@@ -1,14 +1,13 @@
-{% set schema = get_data('@bolt-components-code-snippet/code-snippet.schema.yml') %}
-{% set code %}
-{% verbatim %}{% include "@bolt-components-code-snippet/code-snippet.twig" with {
-  "display": "block",
-  "lang": "html",
-  "content": "Some code snippet"
-} only %}{% endverbatim %}
-{% endset %}
+{% set schema = bolt.data.components['@bolt-components-code-snippet'].schema %}
+
+{% set code %}{% verbatim %}{% include "@bolt-components-code-snippet/code-snippet.twig" with {
+  display: "block",
+  lang: "html",
+  content: "Some code snippet"
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
-  "schema": schema,
-  "content": code,
-  "readmeFile": '@bolt-components-code-snippet/README.md'
+  schema: schema,
+  code: code,
+  readmeFile: '@bolt-components-code-snippet/README.md',
 } only %}
