--- a/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/tooltip/00-tooltip-docs.twig
@@ -1,15 +1,11 @@
 {% set schema = get_data('@bolt-components-tooltip/tooltip.schema.yml') %}
-{% set code %}
-  {% verbatim %}
-  {% include "@bolt-components-tooltip/tooltip.twig" with {
-    trigger: {
-      type: "text",
-      text: "Trigger Text"
-    },
-    content: "Here is a tooltip! And it even comes with a button toggle!"
-  } only %}
-  {% endverbatim %}
-{% endset %}
+{% set code %}{% verbatim %}{% include "@bolt-components-tooltip/tooltip.twig" with {
+  trigger: {
+    type: "text",
+    text: "Trigger Text"
+  },
+  content: "Here is a tooltip! And it even comes with a button toggle!"
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
