--- a/apps/pattern-lab/src/_patterns/02-components/video/00-video-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/00-video-docs.twig
@@ -1,10 +1,10 @@
 {% set schema = bolt.data.components['@bolt-components-video'].schema %}
 {% set code %}{% verbatim %}{% include "@bolt/video.twig" with {
-  "videoId": "5609376179001",
-  "accountId": "1900410236",
-  "playerId": "r1CAdLzTW",
-  "showMeta": true,
-  "showMetaTitle": false
+  videoId: "5609376179001",
+  accountId: "1900410236",
+  playerId: "r1CAdLzTW",
+  showMeta: true,
+  showMetaTitle: false
 } only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
