--- a/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
@@ -1,6 +1,5 @@
 {% set schema = get_data('@bolt-components-block-list/block-list.schema.yml') %}
-{% set code %}{% verbatim %}
-{% include "@bolt-components-block-list/block-list.twig" with {
+{% set code %}{% verbatim %}{% include "@bolt-components-block-list/block-list.twig" with {
   "items" : [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
@@ -28,9 +27,7 @@
     }),
     "Simple text example"
   ]
-} %}
-{% endverbatim %}
-{% endset %}
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
