--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/00-dropdown-docs.twig
@@ -1,56 +1,50 @@
 {% set schema = get_data('@bolt-components-dropdown/dropdown.schema.yml') %}
-{% set code %}{% verbatim %}
-Via Twig
-
+{% set code %}{% verbatim %}// Via Twig
 {% embed "@bolt-components-dropdown/dropdown.twig" with {
   title: "Toggle Menu",
   collapse: true
 } %}
   {% block content %}
     {% include "@bolt-components-nav/nav.twig" with {
-      "links": [
+      links: [
         {
-        "text": "Link 1 Text",
-        "url": "#link-1-url"
+        text: "Link 1 Text",
+        url: "#link-1-url"
       },
       {
-        "text": "Link 2 Text",
-        "url": "#link-2-url"
+        text: "Link 2 Text",
+        url: "#link-2-url"
       },
       {
-        "text": "Link 3 Text",
-        "url": "#link-3-url"
+        text: "Link 3 Text",
+        url: "#link-3-url"
       }
       ]
     } %}
   {% endblock %}
 {% endembed %}
 
-
-Via Web Component and Twig
-
-&lt;bolt-dropdown
+// Via Web Component and Twig
+<bolt-dropdown
   title="Custom Element w/ Collapse &amp; Center"
-&gt;
+>
   {% include "@bolt-components-nav/nav.twig" with {
-    "links": [
+    links: [
       {
-        "text": "Link 1 Text",
-        "url": "#link-1-url"
+        text: "Link 1 Text",
+        url: "#link-1-url"
       },
       {
-        "text": "Link 2 Text",
-        "url": "#link-2-url"
+        text: "Link 2 Text",
+        url: "#link-2-url"
       },
       {
-        "text": "Link 3 Text",
-        "url": "#link-3-url"
+        text: "Link 3 Text",
+        url: "#link-3-url"
       }
     ]
   } only %}
-&lt;/bolt-dropdown&gt;
-{% endverbatim %}
-{% endset %}
+</bolt-dropdown>{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
