--- a/apps/pattern-lab/src/_patterns/02-components/figure/00-figure-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/figure/00-figure-docs.twig
@@ -1,14 +1,11 @@
 {% set schema = bolt.data.components['@bolt-components-figure'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-figure/figure.twig" with {
+{% set code %}{% verbatim %}{% include "@bolt-components-figure/figure.twig" with {
   image: {
     src: "/pattern-lab/images/placeholders/500x500.jpg",
     lazyload: false
   },
-  caption: "&lt;p&gt;The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark.&lt;/p&gt;"
-} only %}
-{% endverbatim %}
-{% endset %}
+  caption: "The greater danger for most of us lies not in setting our aim too high and falling short; but in setting our aim too low, and achieving our mark."
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
