--- a/apps/pattern-lab/src/_patterns/02-components/form/00-form-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/form/00-form-docs.twig
@@ -1,11 +1,8 @@
 {% set schema = bolt.data.components['@bolt-components-form'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-form/form.twig" with {
-    text: "This is a form",
-    url: "http://google.com",
-  } only %}
-{% endverbatim %}
-{% endset %}
+{% set code %}{% verbatim %}{% include "@bolt-components-form/form.twig" with {
+  text: "This is a form",
+  url: "http://google.com",
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
