--- a/apps/pattern-lab/src/_patterns/02-components/link/00-link-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/link/00-link-docs.twig
@@ -1,11 +1,8 @@
 {% set schema = bolt.data.components['@bolt-components-link'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-link/link.twig" with {
-    text: "This is a link",
-    url: "http://google.com",
-  } only %}
-{% endverbatim %}
-{% endset %}
+{% set code %}{% verbatim %}{% include "@bolt-components-link/link.twig" with {
+  text: "This is a link",
+  url: "http://google.com"
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
