--- a/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
@@ -1,10 +1,7 @@
 {% set schema = bolt.data.components['@bolt-components-logo'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-logo/logo.twig" with {
-  src: "/pattern-lab/images/content/logos/logo-paypal.svg",
-} %}
-{% endverbatim %}
-{% endset %}
+{% set code %}{% verbatim %}{% include "@bolt-components-logo/logo.twig" with {
+  src: "/pattern-lab/images/content/logos/logo-paypal.svg"
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
