--- a/apps/pattern-lab/src/_patterns/02-components/unordered-list/00-unordered-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/unordered-list/00-unordered-list-docs.twig
@@ -1,23 +1,20 @@
 {% set schema = bolt.data.components['@bolt-components-unordered-list'].schema %}
-{% set code %} {% verbatim %}
-{% include "@bolt-components-unordered-list/unordered-list.twig" with {
-  "contentItems" : [
+{% set code %}{% verbatim %}{% include "@bolt-components-unordered-list/unordered-list.twig" with {
+  contentItems: [
     {
-      "text": "Do not include any data or information in your posts that are confidential!"
+      text: "Do not include any data or information in your posts that are confidential!"
     },
     {
-      "text": "Apply basic practices for collaborative work."
+      text: "Apply basic practices for collaborative work."
     },
     {
-      "text": "Be honest, respectful, trustworthy and helpful."
+      text: "Be honest, respectful, trustworthy and helpful."
     },
     {
-      "text": "Answer questions authoritatively and concisely. Avoid cluttering discussions with noise."
+      text: "Answer questions authoritatively and concisely. Avoid cluttering discussions with noise."
     }
   ]
-} %}
-{% endverbatim %}
-{% endset %}
+} only %}{% endverbatim %}{% endset %}
 
 {% include '@utils/docs.twig' with {
   schema: schema,
