text string implemented. currently work through wrap issues

--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -505,6 +505,7 @@
   
     {% include '@bolt-components-share/share.twig' with {
       inline: true,
+      text: 'something',
       sources: [
         {
           name: "facebook",
@@ -525,6 +526,27 @@
       ]
     } only %}
 
+  
+    {% include '@bolt-components-share/share.twig' with {
+      sources: [
+        {
+          name: "facebook",
+          url: "https://www.facebook.com/sharer/sharer.php?u={url}&src=sdkpreparse"
+        },
+        {
+          name: "twitter",
+          url: "https://twitter.com/intent/tweet?url={url}&text={title}&via={via}&hashtags={hashtags}"
+        },
+        {
+          name: "linkedin",
+          url: "https://www.linkedin.com/shareArticle?url={url}&title={title}"
+        },
+        {
+          name: "email",
+          url: "mailto:?&body=Sample%20Text%20--%20https%3A//bolt-design-system.com"
+        }
+      ]
+    } only %}
     
   
 {% endblock %}
