--- a/apps/pattern-lab/src/_patterns/02-components/band/00-band-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/00-band-docs.twig
@@ -1,10 +1,10 @@
-{% set schema = bolt.data.components['@bolt-components-band'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-band/band.twig" with {
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-band/band.twig" with {
   content: "Example Band Content",
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-band/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "band",
+  usage: usage
 } only %}
