--- a/apps/pattern-lab/src/_patterns/02-components/backgrounds/00-background-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/backgrounds/00-background-docs.twig
@@ -1,21 +1,21 @@
-{% set schema = bolt.data.components['@bolt-components-background'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-background/background.twig" with {
-    opacity: "heavy",
-    fill: "gradient",
-    focalPoint: {
-      vertical: "center",
-      horizontal: "center"
-    },
-    contentItems: [
-      {
-        pattern: "image",
-        src: "/pattern-lab/images/content/backgrounds/background-tall-4.jpg"
-      }
-    ]
-} only %}{% endverbatim %}{% endset %}
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-background/background.twig" with {
+  opacity: "heavy",
+  fill: "gradient",
+  focalPoint: {
+    vertical: "center",
+    horizontal: "center"
+  },
+  contentItems: [
+    {
+      pattern: "image",
+      src: "/pattern-lab/images/content/backgrounds/background-tall-4.jpg"
+    }
+  ]
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-background/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "background",
+  usage: usage
 } only %}
