--- a/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/00-block-list-docs.twig
@@ -1,6 +1,6 @@
-{% set schema = get_data('@bolt-components-block-list/block-list.schema.yml') %}
-{% set code %}{% verbatim %}{% include "@bolt-components-block-list/block-list.twig" with {
-  "items" : [
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-block-list/block-list.twig" with {
+  items: [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
       url: "#",
@@ -27,10 +27,10 @@
     }),
     "Simple text example"
   ]
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-block-list/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "block-list",
+  usage: usage
 } only %}
