--- a/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/device-viewer/00-device-viewer-docs.twig
@@ -1,15 +1,15 @@
-{% set schema = bolt.data.components['@bolt-components-device-viewer'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-device-viewer/device-viewer.twig" with {
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-device-viewer/device-viewer.twig" with {
   device: "iphone8",
   orientation: "portrait",
   color: "white",
   image: {
     src: "/pattern-lab/images/sample/product-device-screenshot--phone.jpg"
   }
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-device-viewer/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "device-viewer",
+  usage: usage
 } only %}
