--- a/apps/pattern-lab/src/_patterns/02-components/headline/00-headline-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/00-headline-docs.twig
@@ -1,5 +1,5 @@
-{% set schema = bolt.data.components['@bolt-components-headline'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-headline/headline.twig" with {
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-headline/headline.twig" with {
   text: "This is a headline",
 } only %}
 
@@ -17,10 +17,10 @@
 
 {% include "@bolt-components-headline/lead.twig" with {
   text: "This is a lead",
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-headline/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "headline",
+  usage: usage
 } only %}
