--- a/apps/pattern-lab/src/_patterns/02-components/image/00-image-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/image/00-image-docs.twig
@@ -1,11 +1,11 @@
-{% set schema = bolt.data.components['@bolt-components-image'].schema %}
-{% set code %}{% verbatim %}{% include '@bolt-components-image/image.twig' with {
+{% set usage %}{% verbatim %}
+{% include '@bolt-components-image/image.twig' with {
   src: "/src/images/turtle.jpg",
   alt: "A Turtle"
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-image/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "image",
+  usage: usage
 } only %}
