--- a/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/logo/00-logo-docs.twig
@@ -1,10 +1,10 @@
-{% set schema = bolt.data.components['@bolt-components-logo'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-logo/logo.twig" with {
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-logo/logo.twig" with {
   src: "/pattern-lab/images/content/logos/logo-paypal.svg"
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-logo/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "logo",
+  usage: usage
 } only %}
