--- a/apps/pattern-lab/src/_patterns/02-components/page-footer/00-page-footer-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/page-footer/00-page-footer-docs.twig
@@ -1,11 +1,10 @@
-{% set schema = bolt.data.components['@bolt-components-page-footer'].schema %}
-{% set code %}{% verbatim %}{% include "@bolt-components-page-footer/page-footer.twig" with {
+{% set usage %}{% verbatim %}
+{% include "@bolt-components-page-footer/page-footer.twig" with {
   content: content
-} only %}{% endverbatim %}{% endset %}
-
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-page-footer/README.md',
 } only %}
+{% endverbatim %}{% endset %}
 
+{% include "@utils/docs.twig" with {
+  componentName: "page-footer",
+  usage: usage
+} only %}
