--- a/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/share/00-share-docs.twig
@@ -1,5 +1,5 @@
-{% set schema = get_data('@bolt-components-share/share.schema.yml') %}
-{% set code %}{% verbatim %}{% include '@bolt-components-share/share.twig' with {
+{% set usage %}{% verbatim %}
+{% include '@bolt-components-share/share.twig' with {
   sources: [
     {
       name: "facebook",
@@ -18,10 +18,10 @@
       url: "mailto:?&body=Sample%20Text%20--%20https%3A//bolt-design-system.com"
     }
   ]
-} only %}{% endverbatim %}{% endset %}
+} only %}
+{% endverbatim %}{% endset %}
 
-{% include '@utils/docs.twig' with {
-  schema: schema,
-  code: code,
-  readmeFile: '@bolt-components-share/README.md',
+{% include "@utils/docs.twig" with {
+  componentName: "share",
+  usage: usage
 } only %}
