--- a/apps/pattern-lab/src/_patterns/02-components/text/00-text-docs.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/00-text-docs.twig
@@ -1,37 +1,16 @@
-{% set schema = get_data("@bolt-components-text/text.schema.yml") %}
+{% set usage %}{% verbatim %}
+// Web Component
+<bolt-text>
+  This is text.
+</bolt-text>
 
-{# {% set code %}{% verbatim %}{% include "@bolt-components-text/text.twig" with {
-  text: "This is an Eyebrow",
-  eyebrow: true
-} only %}
-
+// Twig
 {% include "@bolt-components-text/text.twig" with {
-  text: "This is a Headline",
-  headline: true
+  text: "This is text."
 } only %}
-
-{% include "@bolt-components-text/text.twig" with {
-  text: "This is a Subheadline",
-  subheadline: true
-} only %}
-
-{% include "@bolt-components-text/text.twig" with {
-  text: "This is regular text.",
-} only %}
-
-{% include "@bolt-components-text/text.twig" with {
-  text: "This is regular text with customized options and utility classes.",
-  tag: "div",
-  fontSize: "xlarge",
-  weight: "bold",
-  util: [
-    'margin-bottom-large',
-    'color-indigo'
-  ]
-} only %}{% endverbatim %}{% endset %} #}
+{% endverbatim %}{% endset %}
 
 {% include "@utils/docs.twig" with {
-  schema: schema,
-  code: code,
-  readmeFile: "@bolt-components-text/README.md",
+  componentName: "text",
+  usage: usage
 } only %}
